fix php docker file E: Package 'libpng12-dev' has no installation candidate

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update \
 	libicu-dev \
 	libjpeg62-turbo-dev \
 	libmcrypt-dev \
-	libpng12-dev \
+	libpng-dev \
 	libxslt1-dev \
 	openssh-server \
 	openssh-client \
