--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,9 +1,13 @@
 #php ใช้ version 7.1 สามารถเปลี่ยนได้ตามที่เราต้องการแต่ต้องเป็นตัว fpm นะครับ เพื่อที่จะให้กับ nginx
 FROM php:7.4-fpm 
 
+RUN apt-get update -y && \
+	apt-get upgrade -y && \
+	apt-get dist-upgrade -y && \
+	apt-get -y autoremove && \
+	apt-get clean
 #Install required package from laravel
-RUN apt-get update \
-	&& apt-get install -y \
+RUN apt-get install -y \
 	cron \
 	libfreetype6-dev \
 	libicu-dev \
@@ -13,10 +17,17 @@ RUN apt-get update \
 	libxslt1-dev \
 	openssh-server \
 	openssh-client \
-	rsync
+	rsync \
+	libonig-dev \
+	libzip-dev
 
 RUN docker-php-ext-configure \
-	gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
+	gd --with-freetype --with-jpeg
+
+RUN pecl install mcrypt
+#enable php extensions
+RUN docker-php-ext-enable \
+	mcrypt
 
 #Install php package
 RUN docker-php-ext-install \
@@ -24,7 +35,6 @@ RUN docker-php-ext-install \
 	gd \
 	intl \
 	mbstring \
-	mcrypt \
 	pdo_mysql \
 	soap \
 	xsl \
