--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,19 @@ services:
 
   database:
     image: mysql:8.0.22
+    command: 
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
     volumes:
       - ./docker/db-files/mysql/data:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=laravel
       - MYSQL_USER=user
+      - MYSQL_USER_HOST=%
       - MYSQL_PASSWORD=password 
       - MYSQL_ROOT_PASSWORD=root 
+      - MYSQL_ROOT_HOST=%
     ports:
         - "3306:3306"
 
