add node to compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,16 @@ services:
     volumes_from:
       - php
     command: "composer install" 
+  
+  nodejs:
+    image: node:12-alpine
+    working_dir: /var/www/laravel
+    volumes_from:
+      - php
+    command: "npm install"
 
   myadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
     ports:
         - 8890:80
     environment:
