default pma password and test js watch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     environment:
         - PMA_ARBITRARY=1
         - PMA_HOST=database
+        - PMA_USER=root
+        - PMA_PASSWORD=root
     restart: always
     depends_on:
         - database
