--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
+        "@testing-library/react": "^11.2.2",
         "axios": "^0.19",
         "babel-jest": "^26.6.3",
         "babel-plugin-import": "^1.13.3",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
         "jest": "^26.6.3",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "laravel-mix-alias": "^1.0.2",
         "laravel-mix-bundle-analyzer": "^1.0.5",
         "lodash": "^4.17.19",
+        "module-alias": "^2.2.2",
         "popper.js": "^1.12",
         "query-string": "^6.13.7",
         "react": "^16.2.0",
@@ -41,5 +45,9 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "yup": "^0.32.6"
+    },
+    "_moduleAliases": {
+        "@root": ".",
+        "@components": "resources/js/components"
     }
 }
